--- a/en/Study-design-2.qmd
+++ b/en/Study-design-2.qmd
@@ -1,120 +1,260 @@
-# Story and Quiz − Study design II
-
-Keywords: OS/PFS/DFS/response, continuous/binary/count/survival
-
 ---
+format:
+  html:
+    toc: true
+---
+
+```{=html}
+<style>
+body {
+  margin: 0;
+  background: #ffffff;
+  color: #2b1f1a;
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 1.55;
+}
+
+h1, h2, h3 {
+  font-family: "Georgia", "Times New Roman", serif;
+  color: #3a2a22;
+  font-weight: 600;
+}
+
+h3 {
+  margin-top: 2.4rem;
+}
+
+a {
+  color: #8b4a24;
+  text-decoration: none;
+}
+a:hover {
+  color: #6f3718;
+  text-decoration: underline;
+}
+
+.navbar {
+  background: #ffffff !important;
+  border-bottom: 1px solid #e6e0da;
+  margin-bottom: 0 !important;
+}
+.navbar .navbar-brand,
+.navbar .navbar-nav > li > a {
+  color: #3a2a22 !important;
+  border-bottom: 2px solid transparent;
+  padding-bottom: 2px;
+}
+.navbar .navbar-nav > li > a:hover {
+  border-bottom-color: #8b4a24;
+}
+
+.hero-text {
+  padding: 1.5rem 0;
+  color: #3a2a22;
+}
+
+.project-card {
+  border: 1px solid #e6e0da;
+  padding: 1.3rem 1.5rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  background: #ffffff;
+  border-radius: 6px;
+  margin-bottom: 1.5rem;
+}
+
+.about-section {
+  border: 1px solid #e6e0da;
+  padding: 1.5rem;
+  border-radius: 0;
+  background: #ffffff;
+  margin-top: 2.5rem;
+}
+
+.about-section::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.author-photo {
+  float: left;
+  margin-right: 1rem;
+  border-radius: 50%;
+}
+
+.btn-link {
+  display: inline-block;
+  border: 1px solid #8b4a24;
+  color: #8b4a24;
+  padding: 0.4rem 0.9rem;
+  font-size: 0.9rem;
+  border-radius: 3px;
+}
+.btn-link:hover {
+  background: #8b4a24;
+  color: #ffffff;
+}
+
+.content-narrow {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 1.8rem 1.2rem 2.5rem;
+}
+
+.hero-header {
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+}
+
+.hero-header-img {
+  width: 100vw;
+  height: min(400px, 45vh);
+  object-fit: cover;
+  object-position: 50% 40%;
+  display: block;
+}
+
+.dialogue p {
+  line-height: 1.7;
+}
+.dialogue .voice-father p {
+  color: #7a3e1a !important;
+}
+.dialogue .voice-daughter p {
+  color: #234f7c !important;
+}
+.dialogue .voice-daughter,
+.dialogue .voice-father {
+  margin-bottom: 0.4rem;
+}
+
+.serif-text p {
+  font-family: "Georgia", "Times New Roman", serif;
+}
+.serif-block p {
+  font-family: "Georgia", "Times New Roman", serif;
+  font-size: 0.9em;  line-height: 1.6;
+}
+</style>
+```
+
+::: hero-header
+![](../image/father-daughter.png){.hero-header-img}
+:::
+
+# From Coffee Chat to Research − Study design II
+
+::: serif-block
+　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, continuous/binary/count/survival
+:::
+
+------------------------------------------------------------------------
 
 ### Data have types
 
-Me: “Okay, coffee is ready.  
-Can I borrow you a bit longer?”
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: “Okay, coffee is ready. Can I borrow you a bit longer?”
+::: 
 
+::: voice-father
 Dad: “If coffee is involved, yes.”
+::: 
 
-Me: “You said something earlier that stuck with me.  
-That *which R function we use depends on the outcome*.  
-I didn’t really get that.  
+::: voice-daughter
+Me: “You said something earlier that stuck with me. That *which R function we use depends on the outcome*. I didn’t really get that. In the end, aren’t all data just… numbers?”
+::: 
 
-In the end, aren’t all data just… numbers?”
+::: voice-father
+Dad: “They’re all numbers, yes. But for statistics, the **type of data** matters a lot. Very roughly, we use four big categories."
+::: 
+::::::::::::::::::::::::::::::::: 
 
-Dad: “They’re all numbers, yes.  
-But for statistics, the **type of data** matters a lot.  
+- Continuous data
+- Binary / categorical data
+- Count data
+- Survival time data
 
-Very roughly, we use four big categories:
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: “Continuous data is things we **measure**, right? Like age or blood pressure. Binary data I get — like ‘with stoma’ vs ‘without stoma’ in the study I want to do.”
+::: 
 
-- **Continuous data**  
-- **Binary / categorical data**  
-- **Count data**  
-- **Survival time data**.”
+::: voice-father
+Dad: “Perfect. **Count data** is when you literally count events, like the number of traffic accidents. **Survival time data** is things like **lifespan** — time from some starting point until an event, such as death. In your case, that could be **time from surgery to returning to work**, or **time to recurrence**.”
+::: 
 
-Me: “Continuous data is things we **measure**, right?  
-Like age or blood pressure.  
+::: voice-daughter
+Me: “When you say it like that, they definitely feel like different beasts. But in the R course I took, we just typed whatever they put on the slides — `t.test()`, `glm()`, `survfit()`... It all felt like a spellbook.”
+::: 
 
-Binary data I get — like ‘with stoma’ vs ‘without stoma’ in the study I want to do.”
+::: voice-father
+Dad: “That’s a common side effect of R lectures. Do you have your laptop?”
+::: 
 
-Dad: “Perfect.  
-**Count data** is when you literally count events,  
-like the number of traffic accidents.  
-
-**Survival time data** is things like **lifespan** —  
-time from some starting point until an event, such as death.  
-
-In your case, that could be **time from surgery to returning to work**,  
-or **time to recurrence**.”
-
-Me: “When you say it like that,  
-they definitely feel like different beasts.  
-
-But in the R course I took,  
-we just typed whatever they put on the slides —  
-`t.test()`, `glm()`, `survfit()`…  
-It all felt like a spellbook.”
-
-Dad: “That’s a common side effect of R lectures.  
-Do you have your laptop?”
-
+::: voice-daughter
 Me: “That sounds like the beginning of homework.”
+::: 
 
-Dad: “Let’s just say ‘a practical demonstration’.  
-Bring it here — we’ll install RStudio if it’s not there.”
+::: voice-father
+Dad: “Let’s just say "a practical demonstration". Bring it here — we’ll install RStudio if it’s not there.”
+::: 
 
-Me: “I knew this was coming.  
-Look, I know my stats skills are still beginner level,  
-and I *do* need R for my own research.  
+::: voice-daughter
+Me: “I knew this was coming. Look, I know my stats skills are still beginner level, and I *do* need R for my own research. So fine, I’ll get my laptop. But I expect maximum efficiency from this session.”
+::: 
 
-So fine, I’ll get my laptop.  
-But I expect maximum efficiency from this session.”
+::: voice-father
+Dad: “I’ll try. In R, for **continuous data**, we often use `mean()`, `t.test()` and `lm()`.”
+::: 
 
-Dad: “I’ll try.  
-In R, for **continuous data**, we often use:
-
-- `mean()`  
-- `t.test()`  
-- `lm()`.”
-
+::: voice-daughter
 Me: “Those at least sound familiar.”
+::: 
 
-Dad: “For **binary data**, we summarize with `table()`,  
-and to get p-values we use `chisq.test()` or `fisher.test()`.  
+::: voice-father
+Dad: “For **binary data**, we summarize with `table()`, and to get p-values we use `chisq.test()` or `fisher.test()`. For more complex analyses, we move to regression models like `glm(family = binomial)`. For **survival time data**, we use things like `survfit()`, `coxph()`, and `cifplot()`.”
+::: 
 
-For more complex analyses,  
-we move to **regression models** like  
-`glm(family = binomial)`.
+::: voice-daughter
+Me: “There’s no way I can memorize all that. I’ll just mix everything up again.”
+::: 
 
-For **survival time data**,  
-we use things like `survfit()`, `coxph()`, and `cifplot()`.”
-
-Me: “There’s no way I can memorize all that.  
-I’ll just mix everything up again.”
-
+::: voice-father
 Dad: “You don’t need to memorize every function name.”
+::: 
 
+::: voice-daughter
 Me: “I like where this is going.”
+::: 
 
-Dad: “What you *do* want is a rough map in your head:
+::: voice-father
+Dad: “What you *do* want is a rough map in your head. If you can picture the **data type**, the appropriate R functions become much easier to remember.”
+::: 
 
-- ‘This looks like **continuous data**,  
-  so probably that family of methods.’  
-- ‘This is **0/1 data**,  
-  so I need methods designed for binary data.’  
+::: voice-daughter
+Me: “So instead of memorizing spells, I should recognize the kind of creature I’m dealing with.”
+::: 
 
-If you can picture the **data type**,  
-the appropriate R functions become much easier to remember.”
+::: voice-father
+Dad: “Exactly. And one more layer down, we’re also thinking about **probability distributions**.”
+::: 
 
-Me: “So instead of memorizing spells,  
-I should recognize the kind of creature I’m dealing with.”
-
-Dad: “Exactly.  
-And one more layer down,  
-we’re also thinking about **probability distributions**.”
-
+::: voice-daughter
 Me: “Ah, here comes the math.”
+::: 
 
+::: voice-father
 Dad: “Nothing too heavy.  
 You’ve heard of the **normal distribution**, right?”
+::: 
 
+::: voice-daughter
 Me: “That one survived from undergrad, yes.”
+::: 
 
+::: voice-father
 Dad: “For statistics, we imagine that behind the data  
 there’s some **probability distribution**:
 
@@ -130,96 +270,83 @@ just the general matching:
 - continuous ⇔ normal-ish  
 - yes/no ⇔ binomial-ish  
 - counts ⇔ Poisson-ish.”
+::: 
 
+::: voice-daughter
 Me: “So how does that help with R?”
+::: 
 
-Dad: “For example,  
-we often talk about **proportions** and **rates** in medicine.  
+::: voice-father
+Dad: “For example, we often talk about **proportions** and **rates** in medicine. We casually throw around words like prevalence or mortality rate. But in statistics they are: "
+::: 
+:::::::::::::::::::::::::::::::::
 
-We casually throw around words like ‘prevalence’ or ‘mortality rate’.  
-But in statistics:
+- Proportion: parameter of a *binomial* distribution  
+- Rate: parameter of a *Poisson* distribution.
 
-- **Proportion** → parameter of a *binomial* distribution  
-- **Rate** → parameter of a *Poisson* distribution.”
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: “But in normal conversation, **proportion** and **rate** are almost interchangeable.”
+::: 
 
-Me: “But in normal conversation, ‘proportion’ and ‘rate’  
-are almost interchangeable.”
+::: voice-father
+Dad: “Right, in everyday language they get blurred. Statistically, they’re different. A **proportion** is something you’d express as a **percentage**, such as "60% of the participants were women." A **rate** relates to **events over time**. For example, think of annual rate of traffic accidents in Tokyo. You wouldn’t express that as "120% per year". It’s something like "X accidents per year".”
+::: 
 
-Dad: “Right, in everyday language they get blurred.  
-Statistically, they’re different.
+::: voice-daughter
+Me: “Okay, that’s finally clicking. So proportion is like ‘out of this group, how many have the characteristic’, and rate is like ‘how fast things are happening over time’.”
+::: 
 
-A **proportion** is something you’d express as a **percentage**:  
-‘60% of the participants were women.’
+::: voice-father
+Dad: “Exactly. And with that in mind, let’s do a small R demo — nothing painful.”
+::: 
 
-A **rate** relates to **events over time**.  
-For example, think of:
-
-> ‘Annual rate of traffic accidents in Tokyo.’
-
-You wouldn’t express that as ‘120% per year’.  
-It’s something like ‘X accidents per year’.”
-
-Me: “Okay, that’s finally clicking.  
-So proportion is like ‘out of this group,  
-how many have the characteristic’,  
-and rate is like ‘how fast things are happening over time’.”
-
-Dad: “Exactly.  
-And with that in mind,  
-let’s do a small R demo — nothing painful.”
-
+::: voice-daughter
 Me: “You always say that right before something painful.”
+::: 
 
-Dad: “We’ll simulate:
+::: voice-father
+Dad: “We’ll simulate age (continuous data), sex, stoma (binary data) and survival time. Then we’ll run some basic summaries.”
+::: 
 
-- **Age** (continuous data)  
-- **Sex, stoma** (binary data)  
-- **Survival time** (survival data)
+::: voice-daughter
+Me: “Okay. I’ll type what you tell me, but I want to understand the big picture, not just more spells.”
+::: 
 
-Then we’ll run some basic summaries.”
+::: voice-father
+Dad: “Deal. First, a quick note about R packages. To **install** a package on your computer, you use `install.packages()`. To **use** an installed package in your current session, you use `library()`. R’s like a bookshelf."
+::: 
+:::::::::::::::::::::::::::::::::
 
-Me: “Okay.  
-I’ll type what you tell me,  
-but I want to understand the big picture, not just more spells.”
+- `install.packages()`: buy the book and put it on the shelf  
+- `library()`: pull the book off the shelf and open it.”
 
-Dad: “Deal.  
-First, a quick note about R packages.
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: “So `install.packages("cifmodeling")` is a one-time thing, and `library(cifmodeling)` is what I run each time I actually use it.”
+::: 
 
-To **install** a package on your computer,  
-you use `install.packages()`.  
-To **use** an installed package in your current session,  
-you use `library()`.
+::: voice-father
+Dad: “Exactly. Reinstalling every time would be like going out to buy coffee beans **every single morning**.”
+::: 
 
-R’s like a bookshelf:
+::: voice-daughter
+Me: “No, thank you. Okay, show me the simulated data.”
+::: 
+:::::::::::::::::::::::::::::::::::::::
 
-- `install.packages()` → buy the book and put it on the shelf  
-- `library()` → pull the book off the shelf and open it.”
+::: {.callout-note appearance="simple" title="Generating simulated data"}
 
-Me: “So `install.packages("cifmodeling")` is a one-time thing,  
-and `library(cifmodeling)` is what I run each time I actually use it.”
+Here we’ll use R to create a simple dataset and run basic analyses for **continuous**, **binary**, and **survival** data. The theme is a two-group comparison: patients with and without a stoma.
 
-Dad: “Exactly.  
-Reinstalling every time would be like going out  
-to buy coffee beans **every single morning**.”
+- Age: continuous, from a normal distribution using `rnorm()`  
 
-Me: “No, thank you.  
-Okay, show me the simulated data.”
+- Sex, stoma: binary, from a binomial distribution using `rbinom()`  
 
----
+- Survival time: from an exponential distribution using `rexp()`
 
-### Generating simulated data
 
-Here we’ll use R to create a simple dataset and run basic analyses  
-for **continuous**, **binary**, and **survival** data.  
-
-The theme is a two-group comparison:  
-patients **with** and **without** a stoma.
-
-- **Age**: continuous, from a **normal distribution** using `rnorm()`  
-- **Sex, stoma**: binary, from a **binomial distribution** using `rbinom()`  
-- **Survival time**: from an **exponential distribution** using `rexp()`
-
-```r
+```{r warning=FALSE}
 set.seed(46)
 
 # Stoma: 1 = with stoma, 0 = without stoma
@@ -249,120 +376,67 @@ dat <- data.frame(
 )
 
 head(dat)
-#         age   sex         stoma      time status
-# 1 59.19077 WOMAN WITHOUT STOMA 17.939751      1
-# 2 59.46486   MAN WITHOUT STOMA 18.189251      1
-# 3 55.34491   MAN WITHOUT STOMA  2.445121      1
-# 4 60.68207   MAN WITHOUT STOMA 46.737429      1
-# 5 61.79577   MAN WITHOUT STOMA  0.149128      1
-# 6 62.84530 WOMAN    WITH STOMA  0.298167      1
+```
+:::
 
 
+::: {.callout-note appearance="simple" title="Summarizing continuous and binary data"}
 
-Summarizing continuous and binary data
+First, let’s describe age and sex in the stoma vs non-stoma groups using a *histogram* and *contingency table*. You should see that the age distribution for the stoma group is slightly shifted to the right (older on average), because that’s how we simulated it.
 
-First, let’s describe age and sex
-in the stoma vs non-stoma groups.
-
+```{r warning=FALSE}
 # install.packages("ggplot2") # if needed
 library(ggplot2)
 
 ggplot(dat, aes(x = age, fill = stoma)) +
-  geom_histogram(alpha = 0.5, position = "identity", bins = 10) +
-  labs(x = "AGE", y = "FREQUENCY", fill = "STOMA") +
-  theme_minimal()
-
-
-You should see that the age distribution
-for the stoma group is slightly shifted to the right
-(older on average), because that’s how we simulated it.
+geom_histogram(alpha = 0.5, position = "identity", bins = 10) +
+labs(x = "AGE", y = "FREQUENCY", fill = "STOMA") +
+theme_minimal()
 
 table(STOMA = dat$stoma, SEX = dat$sex)
-#                   SEX
-# STOMA            WOMAN MAN
-# WITHOUT STOMA      43  76
-# WITH STOMA         44  37
+```
+:::
+
+::: {.callout-note appearance="simple" title="Summarizing survival data with survival curves"}
 
 
-The histogram is a typical tool for continuous data
-
-The contingency table is a basic tool for categorical data
-
-Summarizing survival time data with survival curves
-
-For survival time data,
-we want to describe how long patients survive without the event.
-
-Here we use cifplot() from the cifmodeling package
-to draw Kaplan–Meier curves for overall survival.
+For survival data, we want to describe how long patients survive without the event. Here we use `cifplot()` from the `cifmodeling` package to draw **the Kaplan–Meier curves**. `Event(time, status)` tells R which variables represent the time and event indicator. `outcome.type = "survival"` asks for a survival curve Under our simulation, the non-stoma group should have better survival, so its curve will lie above the stoma group. 
 
 # devtools::install_github("gestimation/cifmodeling") # if needed
-library(cifmodeling)
 
-cifplot(
-  Event(time, status) ~ stoma,
+```{r warning=FALSE}
+# devtools::install_github("gestimation/cifmodeling") # If necessary
+library(cifmodeling)
+cifplot(Event(time, status) ~ stoma,
   data         = dat,
   outcome.type = "survival"
 )
+```
+:::
 
+::: {.callout-note appearance="simple" title="A quiz related to this episode"}
 
-Event(time, status) tells R which variables represent
-the time and event indicator
+From 2009 to 2014, 83 drugs in the oncology field were approved by the FDA. Select the correct percentage of these 83 drugs that were approved based on clinical trials using response rate (tumor shrinkage or complete remission) as the primary endpoint.
 
-outcome.type = "survival" asks for a survival curve
+1.  0～24%
+2.  25～49%
+3.  50～74%
+4.  75～100%
+:::
 
-Under our simulation,
-the non-stoma group should have better survival,
-so its curve will lie above the stoma group.
+::: {.callout-note appearance="simple"  collapse="true" title="Answer"}
+-   The correct answer is **2**.
 
-A quiz related to this episode
+According to the review by Kim and Prasad (2016), 31 out of 83 products were reported to have been approved based on response rate results. Furthermore, the breakdown of endpoints differs between standard approval and accelerated approval. For standard approval, 48 out of 55 products were evaluated based on overall survival, progression-free survival, or disease-free survival. In contrast, for accelerated approval, the majority of products were based on Phase II trial results where response rate was the primary endpoint.
+:::
 
-The word “response rate” is often used in oncology.
+### Reference
 
-Roughly speaking, it describes:
+- Kim C and Prasad V. Strength of validation for surrogate end points used in the US Food and Drug Administration's approval of oncology drugs. Mayo Clin Proc 2016; S0025-6196(16)00125-7
 
-“What proportion of patients achieved tumor shrinkage
-(such as complete or partial response)?”
+### Continuation of their story
 
-In hematologic malignancies,
-it might refer to the proportion who achieved complete remission.
+[Study design I](study-design-1.qmd)
 
-Now, among the following,
-which one is truly a rate in the statistical sense?
+[Study design II](study-design-2.qmd)
 
-Batting average
-
-Male-to-female ratio
-
-Prevalence
-
-Mortality rate
-
-Answer
-
-The correct answer is 4.
-
-Let’s review:
-
-A ratio is one quantity divided by another
-(e.g., BMI = weight ÷ height²)
-
-A proportion is
-“number in subgroup ÷ total number”
-and is bound between 0 and 1 (or 0–100%)
-
-A rate is
-“number of events ÷ person-time”
-
-So:
-
-Batting average = hits ÷ at-bats → proportion
-
-Male-to-female ratio = men ÷ women → ratio
-
-Prevalence = people with disease ÷ total people → proportion
-
-Mortality rate = deaths ÷ person-years → rate
-
-In statistics, being picky with words like this
-helps us choose the right models and interpret results correctly.
