--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -178,7 +178,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「いわれてみれば、たしかに種類が違うね。でも、昔受けたRの授業では、言われた通りにコード打ってただけだったなあ。t.test()とかglm()とかsurvfit()とか、なんか呪文みたいなのを」
+私「いわれてみれば、たしかに種類が違うね。でも、昔受けたRの授業では、言われた通りにコード打ってただけだったなあ。`t.test()`とか`glm()`とか`survfit()`とか、なんか呪文みたいなのを」
 :::
 
 ::: voice-father
@@ -198,7 +198,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「Rではね、連続データを解析するなら、mean()、t.test()、lm() なんかがよく使われる」
+お父さん「Rではね、連続データを解析するなら、`mean()`、`t.test()` なんかがよく使われる」
 :::
 
 ::: voice-daughter
@@ -206,7 +206,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「2値データを集計するときはtable()。p値を計算するときはchisq.test()、fisher.test()。複雑な解析はglm(family = binomial) みたいな回帰モデル。生存時間データだと、survfit()、coxph()、それからcifplot()みたいな関数が出てくる」
+お父さん「2値データを集計するときは`table()`。p値を計算するときは`fisher.test()`。複雑な解析は`glm(family = binomial)` みたいな回帰モデル。生存時間データだと、`survfit()`、`coxph()`、それから`cifplot()`みたいな関数が出てくる」
 :::
 
 ::: voice-daughter
@@ -278,7 +278,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうだね。とりあえずlibrary(ggplot2)、library(cifmodeling)って打って。ヒストグラムとKaplan-Meier曲線を教えるよ」
+お父さん「そうだね。とりあえず`library(ggplot2)`、`library(cifmodeling)`って打って。ヒストグラムとKaplan-Meier曲線を教えるよ」
 :::
 
 ::: voice-daughter
@@ -286,15 +286,15 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「教えてあげてるんだから思考停止しない。Rの機能を追加するとき、install.packages()とlibrary()を使う。ざっくりいうとね、それぞれ、"Rパッケージをパソコンにインストールする"コマンドと、"インストール済みのパッケージを使えるようにする"コマンドなんだ」
+お父さん「教えてあげてるんだから思考停止しない。Rの機能を追加するとき、`install.packages()`と`library()`を使う。ざっくりいうとね、それぞれ、"Rパッケージをパソコンにインストールする"コマンドと、"インストール済みのパッケージを使えるようにする"コマンドなんだ」
 :::
 
 ::: voice-daughter
-私「ふむふむ。じゃあ、install.packages("cifmodeling")の方は、一度やったら、それで終わり？」
+私「ふむふむ。じゃあインストールの方は、一度やったら、それで終わり？」
 :::
 
 ::: voice-father
-お父さん「基本的にはそう。同じパソコンなら、インストールは原則1回でOK。たとえば、install.packages("ggplot2")は、CRANっていうパッケージの倉庫から、自分のパソコンにダウンロードする。library(ggplot2)は、ggplot2を取り出して、"これからグラフを描くからこの道具を使います"ってRに宣言する」
+お父さん「基本的にはそう。同じパソコンなら、インストールは原則1回でOK。たとえば、`install.packages("ggplot2")`は、CRANっていうパッケージの倉庫から、自分のパソコンにダウンロードする。`library(ggplot2)`は、`ggplot2()`を取り出して、"これからグラフを描くからこの道具を使います"ってRに宣言する」
 :::
 
 ::: voice-daughter
@@ -309,11 +309,11 @@ a:hover {
 ::: {.callout-note appearance="simple" title="シミュレーションデータの生成"}
 ここでは、Rを使って簡単なシミュレーションデータを作り、連続データ・2値データ・生存時間データそれぞれについて、代表的な解析のデモをします。題材は「ストーマ保有者と非保有者の2群比較」です。
 
--   年齢：正規分布（rnorm）から生成した連続データ
+-   年齢：正規分布`rnorm()`から生成した連続データ
 
--   性別・ストーマ保有：2項分布（rbinom関数）から生成した2値データ
+-   性別・ストーマ保有：2項分布`rbinom()`から生成した2値データ
 
--   生存時間：指数分布（rexp関数）から生成した生存時間データ
+-   生存時間：指数分布`rexp()`から生成した生存時間データ
 
 ```{r warning=FALSE}
 set.seed(46)
