--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -323,7 +323,7 @@ $$
 :::
 
 ::: voice-daughter
-私「そうそう、数式ばっかじゃねむくなる」
+私「よかった、数式ばっかじゃねむくなる」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -406,16 +406,15 @@ rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma",
 summary(rr_at_20)
 ```
 
-ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「時間と効果って、分けて考えられないんだね」
+私「ハザード比は一定のデータを作ったのに、リスク比は1.367、1.126、1.078と徐々に小さく推定されてる。冒頭のKaplan-Meier曲線でも、最初の5年あたりがいちばん差が開いているもんね。時間と効果って、分けて考えられないんだね」
 :::
 
 ::: voice-father
-お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある。時間とともに効果の大きさが変化するなら、ハザード比に頼らず、時点ごとにリスクを比べる必要がある」
+お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある。時間とともに効果の大きさが変化するなら、ハザード比に頼っちゃだめ。もっと丁寧に時点ごとにリスクを比べないと」
 :::
 
 ::: voice-daughter
