--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -243,7 +243,7 @@ a:hover {
 
 
 ::: {.callout-note appearance="simple" title="シミュレーションデータ（再発あり）の生成"}
-前回の発展形として、シミュレーションデータを使って、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
+前回より少しだけがんの臨床研究を意識して、シミュレーションデータにおける、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
 
 以下のコードでは、死亡だけではなく再発を伴った生存時間アウトカム3種類をRで生成する「関数」generate_dataを定義しています。OSのイベントは「死亡」、RFSのイベントは「死亡と再発」です。CIRのイベントは「再発」ですが、死亡を競合リスクとして扱います。なお、generate_data()やこのシミュレーションデータは、今後の解説でも再利用する予定です。
 
@@ -306,7 +306,7 @@ generate_data <- function(n=200, hr1, hr2) {
 
 
 ::: {.callout-note appearance="simple"  title="全生存期間（OS）のKaplan–Meier曲線"}
-OSとRFSは通常の生存時間データですから、前回と同様に、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier生存曲線**で記述します。
+OSとRFSは通常の生存時間データですから、前回と同様に、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier曲線**で記述します。
 
 ```{r warning=FALSE}
 # devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
@@ -333,7 +333,7 @@ cifplot(Event(time_rfs, status_rfs) ~ stoma,
 ```
 :::
 
-::: {.callout-note appearance="simple"  title="累積発生率（CIR）のAalen-Johansen曲線の違い"}
+::: {.callout-note appearance="simple"  title="累積再発率（CIR）のAalen-Johansen曲線"}
 以下のコードでは、`Event(time_cir, status_cir)`のコーディングによって競合リスクを入力しています。
 
 - `status_cir=1` : 関心のあるイベント（再発）
@@ -359,10 +359,10 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 ::: voice-father
 お父さん「グラフ上は見分けられないからそう思っても仕方ないよね。でもこのふたつは区別してほしい。
 
->> 誤解されやすいが、Kaplan–Meier曲線（生存関数）とAalen-Johansen曲線（累積発生関数）は
->> まったく異なる統計手法である。
+> 生存曲線（Kaplan–Meier曲線）と累積発生曲線（Aalen-Johansen曲線）はまったく異なる統計手法なので
+> 競合リスクがあるときはAalen-Johansen曲線を用いる。
 
-CIRの解析で、Kaplan–Meier推定量を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
+CIRの解析で、Kaplan–Meier曲線を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
 :::
 
 ::: voice-daughter
