Kaplan-Meier bias

--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -211,15 +211,23 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。**これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りがランダムに起きてることが前提になってる」
+お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。**これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね」
 :::
 
 ::: voice-daughter
-私「わかるけどね、死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
 :::
 
 ::: voice-father
-お父さん「そうだね、前も話したけど競合リスクとかかな？生存時間解析ではイベント・競合リスクの扱いによってバイアスが生じることがある」
+お父さん「そうだね、前も話したけど競合リスクとかかな？生存時間解析ではイベント・競合リスクの扱いによってバイアスが生じることがある。カバンの中のパソコン出せる？」
+:::
+
+::: voice-daughter
+私「え？私仕事帰りなんだけど」
+:::
+
+::: voice-father
+お父さん「前に使ったRスクリプトをいじるだけですぐ終わるから。シミュレーションデータでバイアスを見せてあげるよ」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -345,7 +353,7 @@ print(km_panel)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないってことは、Kaplan–Meier曲線にバイアスが生じていることの証拠だっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上でなにに注意した方がいいか聞いたつもりだったんだけど」
+私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないってことは、Kaplan–Meier曲線にバイアスが生じていることの証拠だっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
 :::
 
 ::: voice-father
